--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'Inconsolata', monospace;
+  font-weight: 500;
+  font-size: 24;
+  color: red;
 }
 
 canvas {
