--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
   font-family: 'Inconsolata', monospace;
   font-weight: 500;
   font-size: 24;
-  color: red;
+  color: black;
 }
 
 canvas {
